Datos/Envios/255/compilacion.txt
../Datos/Envios/255/AInfinito.java:20: error: unreachable statement
            t--; 
            ^
1 error
